syntax = "proto3";

package common;

message Version {
  uint32 major = 1;
  uint32 minor = 2;
  uint32 patch = 3;
}

message ChunkPayload {
  bytes chunk = 1;

  // Remaining size of chunks in bytes (excluding current chunk)
  // The data transfer is complete when remaining_size is 0. Additionally,
  // chunk_index+1 = total_chunks
  uint32 remaining_size = 2;

  // starts from 0
  uint32 chunk_index = 3;
  // starts from 1
  uint32 total_chunks = 4;
}

message ChunkAck {
  uint32 chunk_index = 1;
}

enum SeedGenerationStatus {
  SEED_GENERATION_STATUS_INIT = 0;
  SEED_GENERATION_STATUS_PASSPHRASE = 1;
  SEED_GENERATION_STATUS_PIN_CARD = 2;
};
